17, May , 2016 : バージョンが変更されていなかったので修正

--- a/driver/dio/0.9.7
+++ b/driver/dio/0.9.7
@@ -1,4 +1,4 @@
 0.9.5 : Test beta Revision 5.
 0.9.6 : Change cpsdio_devdata.h bugfix. ( 2016 / 04/ 21 )
-
+0.9.7 : CPS-RRY-4PCC inPortNum and outPortNum Changed.
 
